fix download panel spacing between footer

--- a/styl/state-footer.styl
+++ b/styl/state-footer.styl
@@ -1,34 +1,10 @@
 @import 'variables'
 
 /***********************************************************************
-  State Nav and Footer
+  State Footer
 ***********************************************************************/
 
 #viewport
-
-  .state-nav
-    margin-bottom 50px
-
-    a
-      transition $color-transition
-      color #5C4554
-      cursor pointer
-      margin 0 24px
-      font-size 22px
-
-      &:hover
-        text-decoration none
-        transition $color-transition
-        color $blue
-
-      &.active
-        color $blue
-
-  .scroll-progress-dot
-    background-color $blue
-    border-radius 999px
-    height 5px
-    width 5px
 
   .state-footer
     text-align center
@@ -63,3 +39,11 @@
       background -webkit-gradient(linear,0% 50% ,100% 50% ,color-stop(0,rgba(16, 160, 230, 1) ),color-stop(0.5015,rgba(110, 50, 249, 1) ),color-stop(1,rgba(218, 38, 46, 1) ))
       background -o-linear-gradient(0deg, rgba(16, 160, 230, 1) 0%, rgba(110, 50, 249, 1) 50.15%, rgba(218, 38, 46, 1) 100%)
       background -ms-linear-gradient(0deg, rgba(16, 160, 230, 1) 0%, rgba(110, 50, 249, 1) 50.15%, rgba(218, 38, 46, 1) 100%)
+
+@media (max-width: 767px)
+  #viewport
+    .state-footer
+      .footer-links
+        a
+          font-size 34px
+          margin 0 30px
